--- a/genderidentityMS.html
+++ b/genderidentityMS.html
@@ -101,11 +101,10 @@
 								</section>
 
 
-							<!-- Footer -->
-			<!--					<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+								<!-- Footer -->
+								<footer id="footer">
+									<p class="copyright">For the source code of the website, <a href="https://github.com/uncgeducationaltoolkit/uncgeducationaltoolkit.github.io">click here.</a></p>
 								</footer>
--->
 						</div>
 					</div>
 
