--- a/genderidentityYA.html
+++ b/genderidentityYA.html
@@ -34,22 +34,23 @@
 								</header>
 
 							<!-- Content -->
-								<section>
-									<header class="main">
+						<!--			<header class="main">
 										<h2>Gender Identity and Expression Training</h2>
 									</header>
+-->
+									<section>
 
 									<h3>Introduction</h3>
 									<p>As leaders in your organizations, you have a lot of power to help create safe and inclusive environments for students across the LGBTQIA community. This short training is based on Stacey L. Kirby's "I Am" performanative interaction that explores gender identity. It is meant to get participants to actively consider gender identity to help create and foster a safe and understanding environment. This activity is designed for young adult leaders such as college resident assistants, camp counselors, teen librarians, and others.</p>
-									</header>
+									<hr class="major"/>
+
 
 									<h3>Intended Age Group: 18 and Up</h3>
 									<h3>Audience: Resident Assistants, Teen Librarians, Camp Counselors, and other Young Adult Leaders</h3>
-									<hr class="major"
-
 									<h3>Links for Activity </h3>
 									<p><a href="http://cargocollective.com/staceykirby/I-AM ">Website and Description of “I Am” Project</a></p>
 									<p><a href="https://vimeo.com/175259945">Video of “I Am” Presentation</a></p>
+									<hr class="major"/>
 
 									<h3>Handouts </h3>
 									<p><a href="/pdfs/kirbyartisttalk.pdf">PDF Link to “I Am” handout (page 5 of PDF document packet)</a></p>
