--- a/genderidentityYA.html
+++ b/genderidentityYA.html
@@ -34,10 +34,7 @@
 								</header>
 
 							<!-- Content -->
-						<!--			<header class="main">
-										<h2>Gender Identity and Expression Training</h2>
-									</header>
--->
+
 									<section>
 
 									<h3>Introduction</h3>
@@ -97,6 +94,7 @@
 																<hr class="major" />
 
 								</section>
+								<!--End of Content-->
 								<div class="box">
 									<p>© 2021, Marisa Bateman. Toolkit lesson is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</a></p>
 								</div>
