--- a/genderidentityYApdf.html
+++ b/genderidentityYApdf.html
@@ -89,7 +89,7 @@
 																	<hr class="major" />
 
 										<h3>Save This Toolkit</h3>
-										<p><a href="/pdfs/toolkit1.pdf">For a PDF version of this toolkit, click here!</a></p>
+										<p><a href="/pdfs/genderidentityYAprint.pdf">For a PDF version of this toolkit, click here!</a></p>
 
 																	<hr class="major" />
 
