--- a/civics.html
+++ b/civics.html
@@ -37,7 +37,7 @@
 								<p>Canva is a graphic design platform that is easy to use, and offers a free version! It is extremely user friendly and can be used for everything from social media posts to resumes. It includes built-in templates and graphics, but has the option of starting from "scratch" and is completely customizable. It offers different final format options (video, .PNG, HTML embedding, etc.) and is perfect for any kind of project. The free version was used to create the above toolkits, showing that even the affordable version can still be used to create fun, attractive designs!</p>
 								<p>The choice to use Canva to create the "What is Gender?" and "Civic Duty" toolkits was based on a combination of audience and subject matter. These fun designs are perfect for a K-12 audience, and graphic choices reflect the topics as well as the educational purpose. It is colorful and grabs the attention of the audience. The vintage, notebook look is meant to reflect Stacey Kirby's "vintage-government-agency" aesthetic, but purposefully geared towards a younger audience. I recommend using this platform for future educational (or personal) projects because of its simplicity, customization options, and visual appeal.</p>
 								<hr class="major" />
-								<h3>Civics Toolkit for High School Students</h3>
+								<h3>Civic Duty Toolkit for High School Students</h3>
 								<iframe src="https://drive.google.com/file/d/1OUwPc2KMaryX95FqsWODJphMcg1M4lXe/preview" width="640" height="480"></iframe>
 								<hr class="major" />
 
