--- a/genderidentityYApdf.html
+++ b/genderidentityYApdf.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Gender Identity and Expression Training Toolkit #1</title>
+		<title>Gender Identity for Young Adult Leaders Toolkit</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Toolkit #1 by Marisa Bateman</strong></a>
+									<a href="index.html" class="logo"><strong>Toolkit by Marisa Bateman</strong></a>
 									<ul class="icons">
 										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
