--- a/drama.html
+++ b/drama.html
@@ -39,10 +39,10 @@
 										<h2>Lesson Plan: Using Performance Art to Inspire Social Change Draft</h2>
 										</header>
 										<h3>Introduction</h3>
-										<p>I thought this section could be used to explain to Stacey why Wakelet might be useful. </p>
+										<p>The following lesson plan titled "Using Performance Art to Inspire Social Change" centers the works of Stacey L. Kirby for  teaching young adult drama students about the power of theatre and performance art to comment on societal problems and inspire change. The lesson plan features specifically Stacey's projects "The Validation Project" and "VALIDnation" while providing additional readings, discussion questions, and a final activity to facilitate learning and understanding of this topic. Students will be given the opportunity to theoretically design their own performance art project inspired by Stacey's work.</p>
 										<hr class="major"/>
 										<h3>Why Use Wakelet?</h3>
-										<p> I used Wakelet to make this nifty toolkit! Stacey Kirby should use Wakelet because so and so! </p>
+										<p>This lesson plan was designed using the online tool Wakelet. Wakelet is a web-based digital content curation platform where you can organize and present text, images, videos, social media posts, and links in a simple and easy-to-read format. Wakelet is free to use, user friendly, customizable for privacy, easy to create, and easy to share. It's a powerful tool for teachers and creatives to share collections of information quickly and efficiently. Learn more on their website: <a href="wakelet.com">wakelet.com</a>.</p>
 										<hr class="major"/>
 										<h3></h3>
 										<iframe class="wakeletEmbed" width="100%" height="760px" src="https://embed.wakelet.com/wakes/cZkL79ART7glEiKFNM8tv/list?border=1" style="border: none" allow="autoplay"></iframe><!-- Please only call https://embed-assets.wakelet.com/wakelet-embed.js once per page --><script src="https://embed-assets.wakelet.com/wakelet-embed.js" charset="UTF-8"></script>
