--- a/drama.html
+++ b/drama.html
@@ -35,9 +35,9 @@
 
 							<!-- Content -->
 								<section>
-									<header class="main">
+					<!--				<header class="main">
 										<h2>Lesson Plan: Using Performance Art to Inspire Social Change Draft</h2>
-										</header>
+									</header> -->
 										<h3>Introduction</h3>
 										<p>The following lesson plan titled "Using Performance Art to Inspire Social Change" centers the works of Stacey L. Kirby for  teaching young adult drama students about the power of theatre and performance art to comment on societal problems and inspire change. The lesson plan features specifically Stacey's projects "The Validation Project" and "VALIDnation" while providing additional readings, discussion questions, and a final activity to facilitate learning and understanding of this topic. Students will be given the opportunity to theoretically design their own performance art project inspired by Stacey's work.</p>
 										<hr class="major"/>
