--- a/drama.html
+++ b/drama.html
@@ -48,7 +48,7 @@
 										<iframe class="wakeletEmbed" width="100%" height="760px" src="https://embed.wakelet.com/wakes/cZkL79ART7glEiKFNM8tv/list?border=1" style="border: none" allow="autoplay"></iframe><!-- Please only call https://embed-assets.wakelet.com/wakelet-embed.js once per page --><script src="https://embed-assets.wakelet.com/wakelet-embed.js" charset="UTF-8"></script>
 										<hr class="major"/>
 										<h3>Save This Toolkit</h3>
-										<a href="/pdfs/performanceart.pdf">For a PDF version of this toolkit, click here!</a>
+										<a href="/pdfs/drama.pdf">For a PDF version of this toolkit, click here!</a>
 										<hr class="major"/>
 
 
