--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 											</ul>
 										</article>
 										<article>
-											<h3>Civic Duty Toolkit</h3>
+											<h3>Civics Toolkit</h3>
 											<ul class="actions">
 											<li><a href="civics.html" class="button">High School Students</a></li>
 											</ul>
