Cleaning upc comments

--- a/genderidentityYA.html
+++ b/genderidentityYA.html
@@ -24,12 +24,7 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Toolkit by Marisa Bateman</strong></a>
 									<ul class="icons">
-										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									-->
+
 									</ul>
 								</header>
 
@@ -62,7 +57,7 @@
 										<li>Have participants fill out a card with their gender identity (Give the option at the beginning of presentation that participants may keep their answers private if they choose).</li>
 										<li>Depending on the size of the group, you can break out into smaller groups to discuss your answers or meet as one large group. Have the group go over the below questions. Appoint a recorder to write down and present about the group’s discussion and a time keeper to keep each question at a few minutes in each group.</li>
 										<li>Make time for each group’s recorder to present the group’s findings. If you are able, show photos from Stacy L. Kirby’s website including examples of completed cards from the original performances.</li>
-										<li>Then talk about some of the case studies about gender identity and its relevance to the participants’ work. (You can find these in the in the handout links).</li>
+										<li>Then talk about some of the case studies about gender identity and its relevance to the participants’ work. (You can find these in the handout links).</li>
 										<li> Leave time for Q & A and comments. Leave time for everyone to be declared valid as a human as demonstrated in the "I Am" video.</li>
 									</ol>
 									<hr class="major" />
