--- a/finalreport.html
+++ b/finalreport.html
@@ -20,18 +20,11 @@
 					<div id="main">
 						<div class="inner">
 
-							<!-- Header -->
 								<header id="header">
-							<!--		<a href="index.html" class="logo"><strong>Final Report by Marisa Bateman, Tara Bradshaw, Chadwick Dunefsky, Austin Craver, and Lori Sandoval</strong></a> -->
 											<a href="index.html" class="logo"><strong>Our Recommendations and Reflections</strong></a>
 
 									<ul class="icons">
-										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									-->
+
 									</ul>
 								</header>
 
@@ -43,7 +36,7 @@
 										<iframe src="https://drive.google.com/file/d/1b0ARGzLCHylIEdoapJWg3BaIuQzXJUOX/preview" width="960" height="720"></iframe>
 										<hr class="major" />
 										<h3>Save Our Recommendations and Reflections</h3>
-										<a href="/pdfs/finalreport.pdf">For a pdf version of our final report, click here!</a>
+										<a href="/pdfs/finalreport.pdf">For a PDF version of our final report, click here!</a>
 										<p></p>
 										<hr class ="major" />
 								</section>
