--- a/finalreport.html
+++ b/finalreport.html
@@ -26,7 +26,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h3>Final Report Draft</h3>
+										<h3>Final Report</h3>
 										</header>
 										<iframe src="https://drive.google.com/file/d/1b0ARGzLCHylIEdoapJWg3BaIuQzXJUOX/preview" width="960" height="720"></iframe>
 										<hr class="major" />
