--- a/genderidentityMS.html
+++ b/genderidentityMS.html
@@ -76,7 +76,7 @@
 										</li>
 										<li><a href="civics.html">Civics Toolkit</a></li>
 										<li><a href="drama.html">Drama Toolkit</a></li>
-										<li><a href="finalreport.html">Final Report</a></li>
+										<li><a href="finalreport.html">Our Recommendations and Reflections</a></li>
 										</ul>
 								</nav>
 
